--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -11,14 +11,14 @@ AllCops:
 Layout/LineLength:
   Max: 120
 Metrics/MethodLength:
-  Max: 20
+  Max: 130
 Metrics/AbcSize:
   Max: 50
 Metrics/ClassLength:
   Max: 150
 Metrics/BlockLength:
   IgnoredMethods: ['describe']
-  Max: 30
+  Max: 40
 
 
 Style/Documentation:
@@ -51,3 +51,7 @@ Style/HashTransformKeys:
   Enabled: false
 Style/HashTransformValues:
   Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Max: 10
+  
